--- a/index.html
+++ b/index.html
@@ -8,6 +8,90 @@
     <link rel="stylesheet" href="styles/styleindex.css" />
   </head>
   <body>
+    <h1>Juniper Bot Services</h1>
+
+    <div id="aboutme">
+      <h2>About Me</h2>
+      <p>
+        Hello, I'm Juniper! I am an aspiring programmer looking to help people
+        out and collaborate! I have many interests, and would love to learn
+        about other topics. I am 13 (14 on May 18, 2025) and looking to get
+        experience!
+      </p>
+    </div>
+
+    <div id="services">
+      <h2>What I Offer</h2>
+      <p>Here's a list of bot-specific services I offer:</p>
+      <ul>
+        <li><strong>Bot Creation for Discord</strong></li>
+        <li><strong>Hosting (Rarely)</strong></li>
+        <li><strong>Enthusiasm</strong></li>
+      </ul>
+    </div>
+
+    <div id="faq">
+      <h2>Frequently Asked Questions (FAQ)</h2>
+      <p>Here are some frequently asked questions:</p>
+      <ul>
+        <li><strong>Q: Is it free?</strong></li>
+        <li>
+          A: Yes! I have plans on monetizing in the future, but as of now
+          services are free. All I ask is you give me a good review if you
+          enjoyed working together.
+        </li>
+        <li><strong>Q: Will I have to host the bot myself?</strong></li>
+        <li>
+          A: Depends. If I really like the bot, I can potentially host it. If
+          not, I am happy to guide you through hosting it.
+        </li>
+        <li><strong>Q: How complex can the bots be?</strong></li>
+        <li>
+          A: I'd like to keep the bots simple to medium complexity. I am willing
+          to do more complex bots, but rarely.
+        </li>
+        <li><strong>Q: How long will it take?</strong></li>
+        <li>
+          A: As long as it takes. I am doing this on my own time, so I will work
+          on it when I can. I will try to get bots done, but I cannot promise
+          fast delivery.
+        </li>
+        <li><strong>Q: Can I request custom features?</strong></li>
+        <li>
+          A: For sure! Just keep in mind I am just one person, I will try to do
+          my best but I cannot promise every feature will be added. I will try
+          to add as many as I can reasonably add.
+        </li>
+      </ul>
+    </div>
+
+    <div id="process">
+      <h2>How it Works</h2>
+      <p>Here's how it works:</p>
+      <ol>
+        <li>
+          Reach out to me on Discord (check out the contact section below!).
+        </li>
+        <li>Give me your bot idea, and we'll talk and plan out the bot.</li>
+        <li>
+          Work with me as I develop and test the bot, and tell me what you like
+          and don't like.
+        </li>
+        <li>
+          Once the bot is done, I will guide you on setting it up if needed. I
+          am also willing to update bots on some occasions.
+        </li>
+      </ol>
+    </div>
+
+    <div id="contact">
+      <h2>Contact Me!</h2>
+      <p>Please contact me on Discord:</p>
+      <ul>
+        <li>Discord Username: @juniper_is_lost_</li>
+      </ul>
+    </div>
+
     <script src="scripts/script.js"></script>
   </body>
 </html>
